# crawler

./: .gitignore  PROJECT_PLAN.md  README.md  agents.md  improve_texture.py  project.md  pyproject.toml
data/: party.json
data/maps/: level_1.json
data/themes/: game_gui.json
src/: main.py
src/config/: constants.py
src/engine/: raycaster.py  texture_manager.py
src/entities/: ai.py  character.py  chest.py  door.py  enemy.py  enemy_group.py  entity.py  item.py  item_pile.py  player.py  potion.py  spell.py  weapon.py
src/game/: combat_manager.py  game.py  game_map.py  party.py  turn_manager.py
src/game/states/: base_state.py  combat_state.py  inventory_state.py  loot_state.py  playing_state.py
src/tools/: map_editor.py
src/ui/: combat_ui.py  game_gui.py  inventory_ui.py  loot_ui.py  minimap_ui.py  particle_system.py  ui.py
